metadata/force-app/main/default/objects/CustomName_ScDjy__c/CustomName_ScDjy__c.object-meta.xml
<CustomObject>
    <description>Description_lAoIN</description>
    <label>CustomLabel_bMTUV</label>
    <nameField>
        <label>CustomLabel_bMTUV</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_bMTUVs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>