metadata/force-app/main/default/objects/CustomName_ScDjy__c/fields/CustomField_nsgZD__c.field-meta.xml
<CustomField>
    <fullName>CustomField_nsgZD__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFielddJIHg</label>
    <length>255</length>
    <type>Text</type>
</CustomField>